# udnn

./: CIFAR_10_CLASSIFICATION.ipynb  CMakeLists.txt  bench.py  bench_results.py  model_bench.ipynb  report.md  udnn_bench.cc
.github/workflows/: linux.yml  macos.yml
bench_results/fast/: conv_double.csv  conv_float32.csv  dense_double.csv  dense_float32.csv  flatten_double.csv  flatten_float32.csv  flatten_int16.csv  flatten_int8.csv  maxpool_double.csv  maxpool_float32.csv  maxpool_int16.csv  maxpool_int8.csv  relu_double.csv  relu_float32.csv  sigmoid_double.csv  sigmoid_float32.csv
bench_results/slow/: conv_double.csv  conv_float32.csv  dense_double.csv  dense_float32.csv  flatten_double.csv  flatten_float32.csv  flatten_int16.csv  flatten_int8.csv  relu_double.csv  relu_float32.csv  sigmoid_double.csv  sigmoid_float32.csv
bench_results/tf/: conv_double.csv  conv_float32.csv  dense_double.csv  dense_float32.csv  flatten_double.csv  flatten_float32.csv  flatten_int16.csv  flatten_int8.csv  maxpool_double.csv  maxpool_float32.csv  maxpool_int16.csv  maxpool_int8.csv  relu_double.csv  relu_float32.csv  sigmoid_double.csv  sigmoid_float32.csv
python/: udnn.cc
src/: layer.hh  layer_slow.hh
tests/: test_layer.cc  test_layer.py  test_model.py
udnn/: __init__.py  layer.py
